--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://fast-and-power.my.canva.site/dag9ol-dtcw/">
+<meta http-equiv="refresh" content="0; url=https://fastandpower.carrd.co/">
 </head>
 </html>
